--- a/source/index.html
+++ b/source/index.html
@@ -5,8 +5,99 @@
     <title>HTML Academy: Кэт энерджи</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
+    <header class="page-header">
+      <a class="page-header__logo">
+        <img class="page-header__logo-image" src="http://placehold.it" width="33" height="38" alt="Cat Energy">
+      </a>
+        <a>
+      <img class="page-header__logo-image" src="http://placehold.it" width="101" height="18" alt="Cat Energy">
+        </a>
+      <a class="page-header__logo">
+      <img class="page-header__logo-image" src="http://placehold.it" width="24" height="18" alt="Cat Energy">
+        </a>
+      <nav class="main-nav">
+          <div class="main-nav__wrapper">
+        <ul class="main-nav__list site-list">
+        <li class="site-list__item">
+            <a  href="index.html">Главная</a>
+          </li>
+          <li class="site-list__item">
+            <a href="catalog.html">Каталог продукции</a>
+          </li>
+          <li class="site-list__item">
+            <a href="form.html">Подбор программы</a>
+          </li>
+          </ul>
+              </div>
+      </nav>
+    </header>
+<main class="page-main">
+    <div class="aboutus">
+      <h1 class="aboutus__title">Функциональное
+питание для котов</h1>
+  <p class="aboutus__slogan">Занялся собой? Займись котом!</p>
+  <button type="button">Подобрать программу</button>
+      </div>
+    <section class="programms">
+        <h3 class="programms__title">Похудение</h3>
+        <p class="programms__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+        <a>Каталог Slim</a>
+        <h3 class="programms__title">Набор массы</h3>
+        <p class="programms__description">Заработать авторитет среди дворовых котов и даже собак?
+Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+        <a>Каталог Pro</a>
+    </section>
+    <section class="advantages">
+        <h2 class="advantages__title">Как это работает</h2>
+        <ul class="advantages__list">
+        <li class="advantages__item--healthy">Функциональное питание содержит только полезные питательные вещества.</li>
+        <li class="advantages__item--convenient">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
+            <li class="advantages__item--try">Замените один-два приема обычной еды на наше функциональное питание.</li>
+            <li class="advantages__item--result">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+             </ul>
+    </section>
+    <section class="example">
+    <h2 class="example__title">Живой пример</h2>
+        <p class="example__boris">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
+         <table class="example__list">
+                    <tr>
+                        <td class="example__value">5 кг</td>
+                        <td class="example__value">60 дней</td>
+                    </tr>
+                    <tr>
+                        <td class="example__field">снижение веса</td>
+                        <td class="example__field">затрачено времени</td>
+                    </tr>
+                </table>
+        <p class="example__calc">Затраты на питание: 15 000 руб.</p>
+        <span>было</span>
+        <span>стало</span>
+    </section>
+    <div class="contacts">
+    <p class="contacts__cooperation">приглашаем
+к сотрудничеству
+дилеров!</p>
+    <address>ул. Большая Конюшенная, д. 19/8
+        Санкт-Петербург</address>
+    </div>
+     </main>
+    <footer class="page-footer">
+        <a>
+        <img class="page-footer__logo-image" src="http://placehold.it" width="33" height="38" alt="Cat Energy">
+      </a>
+    <div class="page-footer__social-btn">
+                    <a class="page-footer__social-btn--vk" href="#">
+                        <span class="visually-hidden">Вконтакте</span>
+                    </a>
+         <a class="page-footer__social-btn--instagramm" href="#">
+                        <span class="visually-hidden">Инстаграм</span>
+                    </a>
+                    <a class="page-footer__social-btn--facebook"  href="#">
+                        <span class="visually-hidden">Фейсбук</span>
+        </a>
+                </div>
+        <a>HTML Academy</a>
+        </footer>
 
   </body>
 </html>
