--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,17 +5,14 @@
     <title>HTML Academy: Кэт энерджи</title>
   </head>
   <body>
-    <header class="page-header">
+<header class="page-header">
       <a class="page-header__logo">
         <img class="page-header__logo-image" src="http://placehold.it" width="33" height="38" alt="Cat Energy">
+          <img class="page-header__logo-image" src="picture.svg" alt="Cat Energy">
       </a>
-        <a>
-      <img class="page-header__logo-image" src="http://placehold.it" width="101" height="18" alt="Cat Energy">
-        </a>
-      <a class="page-header__logo">
-      <img class="page-header__logo-image" src="http://placehold.it" width="24" height="18" alt="Cat Energy">
-        </a>
+
       <nav class="main-nav">
+          <button class="main-nav__toggle" type="button"></button>
           <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
         <li class="site-list__item">
