--- a/source/index.html
+++ b/source/index.html
@@ -8,14 +8,11 @@
     <header class="page-header">
       <a class="page-header__logo">
         <img class="page-header__logo-image" src="http://placehold.it" width="33" height="38" alt="Cat Energy">
+          <img class="page-header__logo-image" src="picture.svg" alt="Cat Energy">
       </a>
-        <a>
-      <img class="page-header__logo-image" src="http://placehold.it" width="101" height="18" alt="Cat Energy">
-        </a>
-      <a class="page-header__logo">
-      <img class="page-header__logo-image" src="http://placehold.it" width="24" height="18" alt="Cat Energy">
-        </a>
+
       <nav class="main-nav">
+          <button class="main-nav__toggle" type="button"></button>
           <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
         <li class="site-list__item">
@@ -50,10 +47,10 @@
     <section class="advantages">
         <h2 class="advantages__title">Как это работает</h2>
         <ul class="advantages__list">
-        <li class="advantages__item--healthy">Функциональное питание содержит только полезные питательные вещества.</li>
-        <li class="advantages__item--convenient">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
-            <li class="advantages__item--try">Замените один-два приема обычной еды на наше функциональное питание.</li>
-            <li class="advantages__item--result">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+        <li class="advantages__item advantages__item--healthy">Функциональное питание содержит только полезные питательные вещества.</li>
+        <li class="advantages__item advantages__item--convenient">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
+            <li class="advantages__item advantages__item--try">Замените один-два приема обычной еды на наше функциональное питание.</li>
+            <li class="advantages__item advantages__item--result">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
              </ul>
     </section>
     <section class="example">
@@ -101,3 +98,4 @@
 
   </body>
 </html>
+
