--- a/source/index.html
+++ b/source/index.html
@@ -74,28 +74,32 @@
     <p class="contacts__cooperation">приглашаем
 к сотрудничеству
 дилеров!</p>
-    <address>ул. Большая Конюшенная, д. 19/8
+    <address class="contacts__text">ул. Большая Конюшенная, д. 19/8
         Санкт-Петербург</address>
     </div>
      </main>
     <footer class="page-footer">
         <a>
-        <img class="page-footer__logo-image" src="http://placehold.it" width="33" height="38" alt="Cat Energy">
+       <img class="page-footer__logo-image" src="picture.svg" alt="Cat Energy">
       </a>
-    <div class="page-footer__social-btn">
-                    <a class="page-footer__social-btn--vk" href="#">
-                        <span class="visually-hidden">Вконтакте</span>
-                    </a>
-         <a class="page-footer__social-btn--instagramm" href="#">
-                        <span class="visually-hidden">Инстаграм</span>
-                    </a>
-                    <a class="page-footer__social-btn--facebook"  href="#">
-                        <span class="visually-hidden">Фейсбук</span>
-        </a>
-                </div>
+    <div class="page-footer__social social">
+                    <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link social__link--vkontakte" href="#">Вконтакте</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--facebook" href="#">Инстаграм</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--instagram" href="#">Фейсбук</a>
+          </li>
+        </ul>
+      </div>
         <a>HTML Academy</a>
+      <a>
+       <img class="page-footer__logo-image" src="#" alt="Cat Energy">
+      </a>
         </footer>
 
   </body>
 </html>
-
