--- a/source/catalog.html
+++ b/source/catalog.html
@@ -94,7 +94,7 @@
                   Цена
                 </td>
                 <td class="product-item__field">
-                  700 Р.
+                  1000 Р.
                 </td>
               </tr>
             </table>
@@ -102,26 +102,8 @@
           </div>
         </li>
         <li class="products-list__item">
-          <a href="" class="product"></a>
-        </li>
-        <li class="products-list__item">
-          <a href="" class="product"></a>
-        </li>
-        <li class="products-list__item">
-          <a href="" class="product"></a>
-        </li>
-        <li class="products-list__item">
-          <a href="" class="product"></a>
-        </li>
-        <li class="products-list__item">
-          <a href="" class="product"></a>
-        </li>
-        <li class="products-list__item">
-          <a href="" class="product"></a>
-        </li>
-      </ul>
-      <div class="product-item">
-        <img class="product-item__photo" src="http://placehold.it" width="80" height="96" alt="Cat Energy PRO 500 г chicken">
+           <div class="product-item">
+        <img class="product-item__photo" src="http://placehold.it" width="80" height="96" alt="Cat Energy PRO 500 г fish">
         <h3 class="product-item__title">Cat Energy
           PRO 500 г
         </h3>
@@ -138,7 +120,7 @@
             Вкус
           </td>
           <td class="items-cards__field">
-            Курица
+            Рыба
           </td>
         </tr>
         <tr>
@@ -151,222 +133,232 @@
         </tr>
         <a class="items-cards__order">Заказать</a>
       </div>
-      <table class="items-cards__item">
-        <img class="items-cards__item-card items-cards__item-card--photo" src="http://placehold.it" width="80" height="96" alt="Cat Energy PRO 1000 г chicken">
-        <h3 class="items-cards__item-card items-cards__item-card--title">Cat Energy
+        </li>
+        <li class="products-list__item">
+           <div class="product-item">
+        <img class="product-item__photo" src="http://placehold.it" width="80" height="96" alt="Cat Energy PRO 1000 г fish">
+        <h3 class="product-item__title">Cat Energy
           PRO 1000 г
         </h3>
         <tr>
-          <td class="items-cards__item-card items-cards__item-card--value">
+          <td class="items-cards__value">
             Объём
           </td>
-          <td class="items-cards__item-card items-cards__item-card--field">
+          <td class="items-cards__field">
             1000г
           </td>
         </tr>
         <tr>
-          <td class="items-cards__item-card items-cards__item-card--value">
+          <td class="items-cards__value">
             Вкус
           </td>
-          <td class="items-cards__item-card items-cards__item-card--field">
-            Курица
+          <td class="items-cards__field">
+           Рыба
           </td>
         </tr>
         <tr>
-          <td class="items-cards__item-card items-cards__item-card--value">
+          <td class="items-cards__value">
             Цена
           </td>
-          <td class="items-cards__item-card items-cards__item-card--field">
+          <td class="items-cards__field">
             1000 Р.
           </td>
         </tr>
-      </table>
-      <a class="items-cards__item-card items-cards__item-card--order" href="#"> <button class="items-cards__item-card items-cards__item-card--order">Заказать</button> </a>
-      <table class="items-cards__item-card">
-        <img class="items-cards__item-card items-cards__item-card--photo" src="http://placehold.it" width="80" height="96" alt="Cat Energy PRO 500 г fish">
-        <h3 class="items-cards__item-card items-cards__item-card--title">Cat Energy
-          PRO 500 г
-        </h3>
-        <tr>
-          <td class="items-cards__item-card items-cards__item-card--value">
-            Объём
-          </td>
-          <td class="items-cards__item-card items-cards__item-card--field">
-            500г
-          </td>
-        </tr>
-        <tr>
-          <td class="items-cards__item-card items-cards__item-card--value">
-            Вкус
-          </td>
-          <td class="items-cards__item-card items-cards__item-card--field">
-            Рыба
-          </td>
-        </tr>
-        <tr>
-          <td class="items-cards__item-card items-cards__item-card--value">
-            Цена
-          </td>
-          <td class="items-cards__item-card items-cards__item-card--field">
-            500 Р.
-          </td>
-        </tr>
-      </table>
-      <a class="items-cards__item-card items-cards__item-card--order">Заказать</a>
-      <table class="items-cards__item-card">
-        <img class="items-cards__item-card items-cards__item-card--photo" src="http://placehold.it" width="80" height="96" alt="Cat Energy PRO 1000 г fish">
-        <h3 class="items-cards__item-card items-cards__item-card--title">Cat Energy
-          PRO 1000 г
-        </h3>
-        <tr>
-          <td class="items-cards__item-card items-cards__item-card--value">
-            Объём
-          </td>
-          <td class="items-cards__item-card items-cards__item-card--field">
-            1000г
-          </td>
-        </tr>
-        <tr>
-          <td class="items-cards__item-card items-cards__item-card--value">
-            Вкус
-          </td>
-          <td class="items-cards__item-card items-cards__item-card--field">
-            Рыба
-          </td>
-        </tr>
-        <tr>
-          <td class="items-cards__item-card items-cards__item-card--value">
-            Цена
-          </td>
-          <td class="items-cards__item-card items-cards__item-card--field">
-            1000 Р.
-          </td>
-        </tr>
-      </table>
-      <a class="items-cards__item-card items-cards__item-card--order">Заказать </a>
-      <table class="items-cards__item-card">
-        <img class="items-cards__item-card items-cards__item-card--photo" src="http://placehold.it" width="80" height="96" alt="Cat Energy Slim 500 г гречка">
-        <h3 class="items-cards__item-card items-cards__item-card--title">Cat Energy
+        <a class="items-cards__order">Заказать</a>
+      </div>
+        </li>
+        <li class="products-list__item">
+         <div class="product-item">
+        <img class="product-item__photo" src="http://placehold.it" width="80" height="96" alt="Cat Energy Slim 500 г гречка">
+        <h3 class="product-item__title">Cat Energy
           Slim 500 г
         </h3>
         <tr>
-          <td class="items-cards__item-card items-cards__item-card--value">
+          <td class="items-cards__value">
             Объём
           </td>
-          <td class="items-cards__item-card items-cards__item-card--field">
+          <td class="items-cards__field">
             500г
           </td>
         </tr>
         <tr>
-          <td class="items-cards__item-card items-cards__item-card--value">
+          <td class="items-cards__value">
             Вкус
           </td>
-          <td class="items-cards__item-card items-cards__item-card--field">
+          <td class="items-cards__field">
             Гречка
           </td>
         </tr>
         <tr>
-          <td class="items-cards__item-card items-cards__item-card--value">
+          <td class="items-cards__value">
             Цена
           </td>
-          <td class="items-cards__item-card items-cards__item-card--field">
+          <td class="items-cards__field">
             400 Р.
           </td>
         </tr>
-      </table>
-      <a class="items-cards__item-card items-cards__item-card--order">Заказать</a>
-      <table class="items-cards__item-card">
-        <img class="items-cards__item-card items-cards__item-card--photo" src="http://placehold.it" width="80" height="96" alt="Cat Energy PRO 1000 г гречка">
-        <h3 class="items-cards__item-card items-cards__item-card--title">Cat Energy
-          PRO 1000 г
+        <a class="items-cards__order">Заказать</a>
+      </div>
+        </li>
+        <li class="products-list__item">
+          <div class="product-item">
+        <img class="product-item__photo" src="http://placehold.it" width="80" height="96" alt="Cat Energy Slim 1000 г гречка">
+        <h3 class="product-item__title">Cat Energy
+          Slim 1000 г
         </h3>
         <tr>
-          <td class="items-cards__item-card items-cards__item-card--value">
+          <td class="items-cards__value">
             Объём
           </td>
-          <td class="items-cards__item-card items-cards__item-card--field">
-            1000г
-          </td>
-        </tr>
-        <tr>
-          <td class="items-cards__item-card items-cards__item-card--value">
-            Вкус
-          </td>
-          <td class="items-cards__item-card items-cards__item-card--field">
-            Гречка
-          </td>
-        </tr>
-        <tr>
-          <td class="items-cards__item-card items-cards__item-card--value">
-            Цена
-          </td>
-          <td class="items-cards__item-card items-cards__item-card--field">
-            700 Р.
-          </td>
-        </tr>
-      </table>
-      <a class="items-cards__item-card items-cards__item-card--order">Заказать</a>
-      <table class="items-cards__item-card">
-        <img class="items-cards__item-card items-cards__item-card--photo" src="http://placehold.it" width="80" height="96" alt="Cat Energy PRO 500 г рис">
-        <h3 class="items-cards__item-card items-cards__item-card--title">Cat Energy
-          PRO 500 г
-        </h3>
-        <tr>
-          <td class="items-cards__item-card items-cards__item-card--value">
-            Объём
-          </td>
-          <td class="items-cards__item-card items-cards__item-card--field">
+          <td class="items-cards__field">
             500г
           </td>
         </tr>
         <tr>
-          <td class="items-cards__item-card items-cards__item-card--value">
+          <td class="items-cards__value">
             Вкус
           </td>
-          <td class="items-cards__item-card items-cards__item-card--field">
+          <td class="items-cards__field">
+            Гречка
+          </td>
+        </tr>
+        <tr>
+          <td class="items-cards__value">
+            Цена
+          </td>
+          <td class="items-cards__field">
+            700 Р.
+          </td>
+        </tr>
+        <a class="items-cards__order">Заказать</a>
+      </div>
+
+        </li>
+        <li class="products-list__item">
+          <div class="product-item">
+        <img class="product-item__photo" src="http://placehold.it" width="80" height="96" alt="Cat Energy Slim 500 г гречка">
+        <h3 class="product-item__title">Cat Energy
+          Slim 500 г
+        </h3>
+        <tr>
+          <td class="items-cards__value">
+            Объём
+          </td>
+          <td class="items-cards__field">
+            500г
+          </td>
+        </tr>
+        <tr>
+          <td class="items-cards__value">
+            Вкус
+          </td>
+          <td class="items-cards__field">
             Рис
           </td>
         </tr>
         <tr>
-          <td class="items-cards__item-card items-cards__item-card--value">
+          <td class="items-cards__value">
             Цена
           </td>
-          <td class="items-cards__item-card items-cards__item-card--field">
+          <td class="items-cards__field">
             500 Р.
           </td>
         </tr>
-      </table>
-      <a class="items-cards__item-card items-cards__item-card--order">Заказать</a>
-      <a class="items-cards__showall" >Показать еще 100500 товаров</a>
+        <a class="items-cards__order">Заказать</a>
+      </div>
+        </li>
+
+      </ul>
+
+
+      <a class="items-cards__showadd" >Показать еще 100500 товаров</a>
       <p class="items-cards__alltaste">
         На самом деле вкусов гораздо больше!
       </p>
-      <button class="items-cards__showall--show"> Показать все</button>
+      <a class="items-cards__showall"> Показать все</a>
     </section>
     <section class="additional-items">
       <h2 class="additional-items__title">Дополнительные товары</h2>
-      <table class="additional-items__item-card">
-        <h3 class="additional-items__items-cards__item-card--title">Сахарозаменитель</h3>
-        <tr>
-          <td class="additional-items__items-cards__item-card--value">
-            1 упаковка (100 г)
-          </td>
-          <td class="additional-items__items-cards__item-card--field">
-            200 Р.
-          </td>
-        </tr>
-      </table>
-      <a class="additional-items__items-cards__item-card--order">Заказать</a>
-      <table class="additional-items__item-card">
-        <h3 class="additional-items__items-cards__item-card--title">Питьевая вода</h3>
-        <tr>
-          <td class="additional-items__items-cards__item-card--value">
-            5 литров
-          </td>
-          <td class="additional-items__items-cards__item-card--field">
-            50 Р.
-          </td>
-        </tr>
-      </table>
-      <button class="additional-items__items-cards__item-card--order">Заказать</button>
+      <ul class="additional-items__list addproducts-list">
+        <li class="addproducts-list__item">
+          <div class="addproducts-card">
+
+            <h3 class="addproducts-card__title">Сахарозаменитель
+            </h3>
+            <table class="addproducts-card__info">
+              <tr>
+                <td class="addproducts-card__value">
+                  1 упаковка (100 г)
+                </td>
+                <td class="addproducts-card__field">
+                  200 Р
+                </td>
+              </tr>
+
+            </table>
+
+            <a class="addproducts-card__order">Заказать</a>
+          </div>
+        </li>
+        <li class="addproducts-list__item">
+          <div class="addproducts-card">
+
+            <h3 class="addproducts-card__title">Питьевая вода
+            </h3>
+            <table class="addproducts-card__info">
+              <tr>
+                <td class="addproducts-card__value">
+                  5 литров
+                </td>
+                <td class="addproducts-card__field">
+                  50 Р
+                </td>
+              </tr>
+
+            </table>
+
+            <a class="addproducts-card__order">Заказать</a>
+          </div>
+        </li>
+        <li class="addproducts-list__item">
+          <div class="addproducts-card">
+
+            <h3 class="addproducts-card__title">Молоко
+            </h3>
+            <table class="addproducts-card__info">
+              <tr>
+                <td class="addproducts-card__value">
+                  1 литр
+                </td>
+                <td class="addproducts-card__field">
+                  100 Р
+                </td>
+              </tr>
+
+            </table>
+
+            <a class="addproducts-card__order">Заказать</a>
+          </div>
+        </li>
+        <li class="addproducts-list__item">
+          <div class="addproducts-card">
+
+            <h3 class="addproducts-card__title">Витамины
+            </h3>
+            <table class="addproducts-card__info">
+              <tr>
+                <td class="addproducts-card__value">
+                  1 упаковка (30 г)
+                </td>
+                <td class="addproducts-card__field">
+                  300 Р
+                </td>
+              </tr>
+
+            </table>
+
+            <a class="addproducts-card__order">Заказать</a>
+          </div>
+        </li>
+      </ul>
     </section>
