--- a/source/catalog.html
+++ b/source/catalog.html
@@ -107,6 +107,7 @@
         <h3 class="product-item__title">Cat Energy
           PRO 500 г
         </h3>
+             <table class="product-item__info">
         <tr>
           <td class="items-cards__value">
             Объём
@@ -131,6 +132,7 @@
             700 Р.
           </td>
         </tr>
+               </table>
         <a class="items-cards__order">Заказать</a>
       </div>
         </li>
@@ -140,6 +142,7 @@
         <h3 class="product-item__title">Cat Energy
           PRO 1000 г
         </h3>
+             <table class="product-item__info">
         <tr>
           <td class="items-cards__value">
             Объём
@@ -164,6 +167,7 @@
             1000 Р.
           </td>
         </tr>
+               </table>
         <a class="items-cards__order">Заказать</a>
       </div>
         </li>
@@ -173,6 +177,7 @@
         <h3 class="product-item__title">Cat Energy
           Slim 500 г
         </h3>
+           <table class="product-item__info">
         <tr>
           <td class="items-cards__value">
             Объём
@@ -197,6 +202,7 @@
             400 Р.
           </td>
         </tr>
+           </table>
         <a class="items-cards__order">Заказать</a>
       </div>
         </li>
@@ -206,6 +212,7 @@
         <h3 class="product-item__title">Cat Energy
           Slim 1000 г
         </h3>
+            <table class="product-item__info">
         <tr>
           <td class="items-cards__value">
             Объём
@@ -230,6 +237,7 @@
             700 Р.
           </td>
         </tr>
+            </table>
         <a class="items-cards__order">Заказать</a>
       </div>
 
@@ -240,6 +248,7 @@
         <h3 class="product-item__title">Cat Energy
           Slim 500 г
         </h3>
+            <table class="product-item__info">
         <tr>
           <td class="items-cards__value">
             Объём
@@ -264,6 +273,7 @@
             500 Р.
           </td>
         </tr>
+            </table>
         <a class="items-cards__order">Заказать</a>
       </div>
         </li>
@@ -362,3 +372,33 @@
         </li>
       </ul>
     </section>
+      <section class="specialoffer">
+        <p class="specialoffer__description">Закажите все
+и получите чехол для кота в подарок!</p>
+      </section>
+    </main>
+    <footer class="page-footer">
+        <a>
+       <img class="page-footer__logo-image" src="picture.svg" alt="Cat Energy">
+      </a>
+    <div class="page-footer__social social">
+                    <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link social__link--vkontakte" href="#">Вконтакте</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--facebook" href="#">Инстаграм</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--instagram" href="#">Фейсбук</a>
+          </li>
+        </ul>
+      </div>
+        <a>HTML Academy</a>
+      <a>
+       <img class="page-footer__logo-image" src="#" alt="Cat Energy">
+      </a>
+        </footer>
+
+  </body>
+</html>
