--- a/source/form.html
+++ b/source/form.html
@@ -31,7 +31,7 @@
     </header>
     <main>
       <section class="questionnaire">
-                    <h1 class="page-header__title">Подбор программы</h1>
+                    <h1 class="questionnaire__title">Подбор программы</h1>
         <p class="questionnaire__description">Заполните анкету и мы подберем
 программу питания для вашего кота</p>
 
@@ -40,37 +40,37 @@
           action="https://echo.htmlacademy.ru">
       <div class="info-about-cat">
       <p>
-        <label for="info-about-cat__name">Имя:<sup>*</sup></label>
-        <input id="info-about-cat__name" type="text"
-               name="catname" placeholder="Барсик">
+        <label for="cat-name">Имя:<sup>*</sup></label>
+        <input id="cat-name" type="text"
+               name="catsname" placeholder="Барсик">
       </p>
       <p>
-        <label for="info-about-cat__weight">Вес (кг):<sup>*</sup></label>
-        <input id="info-about-cat__weight" type="text"
-               name="catweight" placeholder="7">
+        <label for="cat-weight">Вес (кг):<sup>*</sup></label>
+        <input id="cat-weight" type="text"
+               name="catsweight" placeholder="7">
       </p>
       <p>
-        <label for="info-about-cat__age">Возраст (лет):</label>
-        <input id="info-about-cat__age" type="text"
-               name="catage" placeholder="7">
+        <label for="cat-age">Возраст (лет):</label>
+        <input id="cat-age" type="text"
+               name="catsage" placeholder="7">
       </p>
 </div>
 <fieldset>
         <legend class="visually-hidden">Выбор программы</legend>
-        <ul class="programms__list ourprogramms--list">
-          <li class="ourprogramms--list__item">
+        <ul class="programms__list ourprogramms-list">
+          <li class="ourprogramms-list__item">
             <input type="radio" name="programms_name" value="slim" id="filter-slim" checked>
             <label for="filter-slim">
               Похудение
             </label>
           </li>
-          <li class="ourprogramms--list__item">
+          <li class="ourprogramms-list__item">
             <input type="radio" name="programms_name" value="fat" id="filter-fat">
             <label for="filter-fat">
               Набор массы
             </label>
           </li>
-          <li class="ourprogramms--list__item">
+          <li class="ourprogramms-list__item">
             <input type="radio" name="programms_namе" value="undefined" id="filter-undefined">
             <label for="filter-undefined">
               Не знаю (Нужен ваш совет)
@@ -81,13 +81,13 @@
       <div class="info-about-owner">
         <legend class="info-about-owner__title">Контактные данные (владельца кота)</legend>
       <p>
-        <label for="info-about-owner__post">E-mail:<sup>*</sup></label>
-        <input id="info-about-owner__post" type="text"
+        <label for="owner-post">E-mail:<sup>*</sup></label>
+        <input id="owner-post" type="email"
                name="email" placeholder="kuklachev@gmail.com">
       </p>
       <p>
-        <label for="info-about-owner__phone">Телефон:*<sup>*</sup></label>
-        <input id="info-about-owner__phone" type="text"
+        <label for="owner-phone">Телефон:*<sup>*</sup></label>
+        <input id="owner-phone" type="tel"
                name="phone" placeholder="8 (960) 900-60-90">
       </p>
 
@@ -104,7 +104,7 @@
 <div class="additional">
                         <fieldset class="additional__products">
                             <legend>Дополнительно:</legend>
-                            <div class="additional__products checkbox">
+                            <div class="additional__products-checkbox">
                                 <div class="filter-option">
                                     <input type="checkbox" id="sweetener" name="sweetener" class="visually-hidden" checked>
                                     <label for="sweetener">Сахарозаменитель</label>
