--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,28 +3,31 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="page-header">
+
+      <header class="page-header">
       <a class="page-header__logo">
-      <img class="page-header__logo-image" src="http://placehold.it" width="33" height="38" alt="Cat Energy">
-      <img class="page-header__logo-image" src="picture.svg" alt="Cat Energy">
+
+          <img class="page-header__logo-image" src="img/logo-mobile.svg" alt="Cat Energy" width="191px" height="39px">
       </a>
+
       <nav class="main-nav">
-        <button class="main-nav__toggle" type="button"></button>
-        <div class="main-nav__wrapper">
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item">
-              <a  href="index.html">Главная</a>
-            </li>
-            <li class="site-list__item">
-              <a href="catalog.html">Каталог продукции</a>
-            </li>
-            <li class="site-list__item">
-              <a href="form.html">Подбор программы</a>
-            </li>
+          <button class="main-nav__toggle" type="button"></button>
+          <div class="main-nav__wrapper">
+        <ul class="main-nav__list site-list">
+        <li class="site-list__item">
+            <a  href="index.html">Главная</a>
+          </li>
+          <li class="site-list__item">
+            <a href="catalog.html">Каталог продукции</a>
+          </li>
+          <li class="site-list__item">
+            <a href="form.html">Подбор программы</a>
+          </li>
           </ul>
-        </div>
+              </div>
       </nav>
     </header>
     <main class="page-main">
@@ -33,42 +36,45 @@
       <ul class="items-cards__list products-list">
         <li class="products-list__item">
           <div class="product-item">
-            <img class="product-item__photo" src="http://placehold.it" width="80" height="96" alt="Cat Energy PRO 500 г chicken">
-            <h3 class="product-item__title">Cat Energy
-              PRO 500 г
-            </h3>
-            <table class="product-item__info">
-              <tr>
-                <td class="product-item__value">
-                  Объём
-                </td>
-                <td class="product-item__field">
-                  500г
-                </td>
-              </tr>
-              <tr>
-                <td class="product-item__value">
-                  Вкус
-                </td>
-                <td class="product-item__field">
-                  Курица
-                </td>
-              </tr>
-              <tr>
-                <td class="product-item__value">
-                  Цена
-                </td>
-                <td class="product-item__field">
-                  700 Р.
-                </td>
-              </tr>
-            </table>
+            <img class="product-item__photo" src="img/chicken-small-mobile@1x.jpg" width="70" height="80" alt="Cat Energy PRO 500 г chicken">
+            <div class="product-item__wrap">
+              <h3 class="product-item__title">Cat Energy
+                PRO 500 г
+              </h3>
+              <table class="product-item__info">
+                <tr>
+                  <td class="product-item__value">
+                    Объём
+                  </td>
+                  <td class="product-item__field">
+                    500г
+                  </td>
+                </tr>
+                <tr>
+                  <td class="product-item__value">
+                    Вкус
+                  </td>
+                  <td class="product-item__field">
+                    Курица
+                  </td>
+                </tr>
+                <tr>
+                  <td class="product-item__value">
+                    Цена
+                  </td>
+                  <td class="product-item__field">
+                    700 Р.
+                  </td>
+                </tr>
+              </table>
+            </div>
             <a class="product-item__order">Заказать</a>
           </div>
         </li>
         <li class="products-list__item">
           <div class="product-item">
-            <img class="product-item__photo" src="http://placehold.it" width="80" height="96" alt="Cat Energy PRO 1000 г chicken">
+            <img class="product-item__photo" src="img/chicken-big-mobile@1x.jpg" width="70" height="80" alt="Cat Energy PRO 1000 г chicken">
+            <div class="product-item__wrap">
             <h3 class="product-item__title">Cat Energy
               PRO 1000 г
             </h3>
@@ -98,201 +104,212 @@
                 </td>
               </tr>
             </table>
+            </div>
             <a class="product-item__order">Заказать</a>
           </div>
         </li>
         <li class="products-list__item">
            <div class="product-item">
-        <img class="product-item__photo" src="http://placehold.it" width="80" height="96" alt="Cat Energy PRO 500 г fish">
+        <img class="product-item__photo" src="img/fish-small-mobile@1x.jpg" width="70" height="80" alt="Cat Energy PRO 500 г fish">
+             <div class="product-item__wrap">
         <h3 class="product-item__title">Cat Energy
           PRO 500 г
         </h3>
              <table class="product-item__info">
         <tr>
-          <td class="items-cards__value">
+          <td class="product-item__value">
             Объём
           </td>
-          <td class="items-cards__field">
+          <td class="product-item__field">
             500г
           </td>
         </tr>
         <tr>
-          <td class="items-cards__value">
+          <td class="product-item__value">
             Вкус
           </td>
-          <td class="items-cards__field">
+          <td class="product-item__field">
             Рыба
           </td>
         </tr>
         <tr>
-          <td class="items-cards__value">
+          <td class="product-item__value">
             Цена
           </td>
-          <td class="items-cards__field">
+          <td class="product-item__field">
             700 Р.
           </td>
         </tr>
                </table>
-        <a class="items-cards__order">Заказать</a>
+             </div>
+        <a class="product-item__order">Заказать</a>
       </div>
         </li>
         <li class="products-list__item">
            <div class="product-item">
-        <img class="product-item__photo" src="http://placehold.it" width="80" height="96" alt="Cat Energy PRO 1000 г fish">
+        <img class="product-item__photo" src="img/fish-big-mobile@1x.jpg" width="70" height="80" alt="Cat Energy PRO 1000 г fish">
+             <div class="product-item__wrap">
         <h3 class="product-item__title">Cat Energy
           PRO 1000 г
         </h3>
              <table class="product-item__info">
         <tr>
-          <td class="items-cards__value">
+          <td class="product-item__value">
             Объём
           </td>
-          <td class="items-cards__field">
+          <td class="product-item__field">
             1000г
           </td>
         </tr>
         <tr>
-          <td class="items-cards__value">
+          <td class="product-item__value">
             Вкус
           </td>
-          <td class="items-cards__field">
+          <td class="product-item__field">
            Рыба
           </td>
         </tr>
         <tr>
-          <td class="items-cards__value">
+          <td class="product-item__value">
             Цена
           </td>
-          <td class="items-cards__field">
+          <td class="product-item__field">
             1000 Р.
           </td>
         </tr>
                </table>
-        <a class="items-cards__order">Заказать</a>
+             </div>
+        <a class="product-item__order">Заказать</a>
       </div>
         </li>
         <li class="products-list__item">
          <div class="product-item">
-        <img class="product-item__photo" src="http://placehold.it" width="80" height="96" alt="Cat Energy Slim 500 г гречка">
+        <img class="product-item__photo" src="img/buckwheat-small-desktop@1x.png" width="70" height="80" alt="Cat Energy Slim 500 г гречка">
+           <div class="product-item__wrap">
         <h3 class="product-item__title">Cat Energy
           Slim 500 г
         </h3>
            <table class="product-item__info">
         <tr>
-          <td class="items-cards__value">
+          <td class="product-item__value">
             Объём
           </td>
-          <td class="items-cards__field">
+          <td class="product-item__field">
             500г
           </td>
         </tr>
         <tr>
-          <td class="items-cards__value">
+          <td class="product-item__value">
             Вкус
           </td>
-          <td class="items-cards__field">
+          <td class="product-item__field">
             Гречка
           </td>
         </tr>
         <tr>
-          <td class="items-cards__value">
+          <td class="product-item__value">
             Цена
           </td>
-          <td class="items-cards__field">
+          <td class="product-item__field">
             400 Р.
           </td>
         </tr>
            </table>
-        <a class="items-cards__order">Заказать</a>
+           </div>
+        <a class="product-item__order">Заказать</a>
       </div>
         </li>
         <li class="products-list__item">
           <div class="product-item">
-        <img class="product-item__photo" src="http://placehold.it" width="80" height="96" alt="Cat Energy Slim 1000 г гречка">
+        <img class="product-item__photo" src="img/buckwheat-big-mobile@1x.jpg" width="70" height="80" alt="Cat Energy Slim 1000 г гречка">
+            <div class="product-item__wrap">
         <h3 class="product-item__title">Cat Energy
           Slim 1000 г
         </h3>
             <table class="product-item__info">
         <tr>
-          <td class="items-cards__value">
+          <td class="product-item__value">
             Объём
           </td>
-          <td class="items-cards__field">
+          <td class="product-item__field">
             500г
           </td>
         </tr>
         <tr>
-          <td class="items-cards__value">
+          <td class="product-item__value">
             Вкус
           </td>
-          <td class="items-cards__field">
+          <td class="product-item__field">
             Гречка
           </td>
         </tr>
         <tr>
-          <td class="items-cards__value">
+          <td class="product-item__value">
             Цена
           </td>
-          <td class="items-cards__field">
+          <td class="product-item__field">
             700 Р.
           </td>
         </tr>
             </table>
-        <a class="items-cards__order">Заказать</a>
+            </div>
+        <a class="product-item__order">Заказать</a>
       </div>
 
         </li>
         <li class="products-list__item">
           <div class="product-item">
-        <img class="product-item__photo" src="http://placehold.it" width="80" height="96" alt="Cat Energy Slim 500 г гречка">
+        <img class="product-item__photo" src="img/rice-small-mobile@1x.jpg" width="70" height="80" alt="Cat Energy Slim 500 г рис">
+            <div class="product-item__wrap">
         <h3 class="product-item__title">Cat Energy
           Slim 500 г
         </h3>
             <table class="product-item__info">
         <tr>
-          <td class="items-cards__value">
+          <td class="product-item__value">
             Объём
           </td>
-          <td class="items-cards__field">
+          <td class="product-item__field">
             500г
           </td>
         </tr>
         <tr>
-          <td class="items-cards__value">
+          <td class="product-item__value">
             Вкус
           </td>
-          <td class="items-cards__field">
+          <td class="product-item__field">
             Рис
           </td>
         </tr>
         <tr>
-          <td class="items-cards__value">
+          <td class="product-item__value">
             Цена
           </td>
-          <td class="items-cards__field">
+          <td class="product-item__field">
             500 Р.
           </td>
         </tr>
             </table>
-        <a class="items-cards__order">Заказать</a>
+            </div>
+        <a class="product-item__order">Заказать</a>
       </div>
         </li>
 
       </ul>
-
-
-      <a class="items-cards__showadd" >Показать еще 100500 товаров</a>
-      <p class="items-cards__alltaste">
+      </section>
+      <section class="another-products">
+<img class="another-products__plus" src="img/icon-plus.svg" width="30" height="30">
+      <a class="another-products__showadd" >Показать еще 100500 товаров</a>
+      <p class="another-products__alltaste">
         На самом деле вкусов гораздо больше!
       </p>
-      <a class="items-cards__showall"> Показать все</a>
+      <a class="another-products__showall"> Показать все</a>
     </section>
     <section class="additional-items">
       <h2 class="additional-items__title">Дополнительные товары</h2>
       <ul class="additional-items__list addproducts-list">
         <li class="addproducts-list__item">
           <div class="addproducts-card">
-
             <h3 class="addproducts-card__title">Сахарозаменитель
             </h3>
             <table class="addproducts-card__info">
@@ -373,32 +390,48 @@
       </ul>
     </section>
       <section class="specialoffer">
-        <p class="specialoffer__description">Закажите все
-и получите чехол для кота в подарок!</p>
+
+        <p class="specialoffer__description">Закажите все&nbsp;
+и получите чехол для&nbsp; кота в подарок!</p>
       </section>
+      <div class="contacts">
+
+    <p class="contacts__cooperation">Приглашаем
+к сотрудничеству
+дилеров!</p>
+    <address>ул. Большая&nbsp; Конюшенная, д. 19/8&nbsp;
+      Санкт-Петербург</address>
+
+      <img class="contacts__contacts-map" src="img/bg-map-mobile@1x.png"  alt="map">
+    </div>
     </main>
     <footer class="page-footer">
         <a>
-       <img class="page-footer__logo-image" src="picture.svg" alt="Cat Energy">
+       <img class="page-footer__logo-image" src="img/logo-footer.svg" width="130" height="94" alt="Cat Energy">
       </a>
     <div class="page-footer__social social">
                     <ul class="social__list">
           <li class="social__item">
-            <a class="social__link social__link--vkontakte" href="#">Вконтакте</a>
+
+            <a class="social__link social__link--vkontakte" href="#"><span>Вконтакте</span></a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--facebook" href="#">Инстаграм</a>
+            <a class="social__link social__link--facebook" href="#"><span>Инстаграм</span></a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--instagram" href="#">Фейсбук</a>
+            <a class="social__link social__link--instagram" href="#"><span>Фейсбук</span></a>
           </li>
         </ul>
       </div>
-        <a>HTML Academy</a>
+      <div class = "emblems">
+        <a><span>HTML Academy</span></a>
       <a>
-       <img class="page-footer__logo-image" src="#" alt="Cat Energy">
+
+       <img class="page-footer__logo-image" src="img/htmlacademy.svg"  width="28" height="34" alt="Cat Energy">
       </a>
+      </div>
         </footer>
 
   </body>
 </html>
+
