--- a/source/index.html
+++ b/source/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
+
+        <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="page-header">
       <a class="page-header__logo">
-        <img class="page-header__logo-image" src="http://placehold.it" width="33" height="38" alt="Cat Energy">
-          <img class="page-header__logo-image" src="picture.svg" alt="Cat Energy">
+
+          <img class="page-header__logo-image" src="img/logo-mobile.svg" alt="Cat Energy" width="191px" height="39px">
       </a>
 
       <nav class="main-nav">
@@ -33,13 +35,14 @@
       <h1 class="aboutus__title">Функциональное
 питание для котов</h1>
   <p class="aboutus__slogan">Занялся собой? Займись котом!</p>
-  <button type="button">Подобрать программу</button>
+      <img class="aboutus__products-photo" src="img/index-can-mobile@1x.png" width="280" height="274" alt="Cat Energy">
+  <button class="aboutus__toggle" type="button">Подобрать программу</button>
       </div>
     <section class="programms">
-        <h3 class="programms__title">Похудение</h3>
+        <h3 class="programms__title programms__title--slim">Похудение</h3>
         <p class="programms__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
         <a>Каталог Slim</a>
-        <h3 class="programms__title">Набор массы</h3>
+        <h3 class="programms__title programms__title--pro">Набор массы</h3>
         <p class="programms__description">Заработать авторитет среди дворовых котов и даже собак?
 Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
         <a>Каталог Pro</a>
@@ -67,38 +70,46 @@
                     </tr>
                 </table>
         <p class="example__calc">Затраты на питание: 15 000 руб.</p>
+      <img class="example__fat-cat" src="img/before-mobile@1x.png" alt="Cat Energy">
         <span>было</span>
         <span>стало</span>
     </section>
     <div class="contacts">
+
     <p class="contacts__cooperation">приглашаем
 к сотрудничеству
 дилеров!</p>
-    <address class="contacts__text">ул. Большая Конюшенная, д. 19/8
-        Санкт-Петербург</address>
+    <address>ул. Большая&nbsp; Конюшенная, д. 19/8&nbsp;
+      Санкт-Петербург</address>
+
+      <img class="contacts__contacts-map" src="img/bg-map-mobile@1x.png"  alt="map">
     </div>
      </main>
     <footer class="page-footer">
         <a>
-       <img class="page-footer__logo-image" src="picture.svg" alt="Cat Energy">
+       <img class="page-footer__logo-image" src="img/logo-footer.svg" width="130" height="94" alt="Cat Energy">
       </a>
     <div class="page-footer__social social">
                     <ul class="social__list">
           <li class="social__item">
-            <a class="social__link social__link--vkontakte" href="#">Вконтакте</a>
+
+            <a class="social__link social__link--vkontakte" href="#"><span>Вконтакте</span></a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--facebook" href="#">Инстаграм</a>
+            <a class="social__link social__link--facebook" href="#"><span>Инстаграм</span></a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--instagram" href="#">Фейсбук</a>
+            <a class="social__link social__link--instagram" href="#"><span>Фейсбук</span></a>
           </li>
         </ul>
       </div>
-        <a>HTML Academy</a>
+      <div class = "emblems">
+        <a><span>HTML Academy</span></a>
       <a>
-       <img class="page-footer__logo-image" src="#" alt="Cat Energy">
+
+       <img class="page-footer__logo-image" src="img/htmlacademy.svg"  width="28" height="34" alt="Cat Energy">
       </a>
+      </div>
         </footer>
 
   </body>
