--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
+     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
@@ -399,7 +400,7 @@
     <p class="contacts__cooperation">Приглашаем
 к сотрудничеству
 дилеров!</p>
-    <address>ул. Большая&nbsp; Конюшенная, д. 19/8&nbsp;
+    <address class="contacts__address">ул. Большая&nbsp; Конюшенная, д. 19/8&nbsp;
       Санкт-Петербург</address>
 
       <img class="contacts__contacts-map" src="img/bg-map-mobile@1x.png"  alt="map">
