--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
-
+ <link href="css/normalize.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
@@ -41,11 +41,11 @@
     <section class="programms">
         <h3 class="programms__title programms__title--slim">Похудение</h3>
         <p class="programms__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-        <a>Каталог Slim</a>
+        <a class="programms__catalog">Каталог Slim</a>
         <h3 class="programms__title programms__title--pro">Набор массы</h3>
         <p class="programms__description">Заработать авторитет среди дворовых котов и даже собак?
 Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-        <a>Каталог Pro</a>
+        <a class="programms__catalog">Каталог Pro</a>
     </section>
     <section class="advantages">
         <h2 class="advantages__title">Как это работает</h2>
@@ -79,7 +79,7 @@
     <p class="contacts__cooperation">приглашаем
 к сотрудничеству
 дилеров!</p>
-    <address>ул. Большая&nbsp; Конюшенная, д. 19/8&nbsp;
+    <address class="contacts__address">ул. Большая&nbsp; Конюшенная, д. 19/8&nbsp;
       Санкт-Петербург</address>
 
       <img class="contacts__contacts-map" src="img/bg-map-mobile@1x.png"  alt="map">
